--- a/services/frontend/src/majorgainz/components/VerticalSidebar/sidebar.module.css
+++ b/services/frontend/src/majorgainz/components/VerticalSidebar/sidebar.module.css
@@ -16,8 +16,9 @@
   
   /* Layout */
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding-top: 16px;
   
   /* Smooth transitions */
   transition: transform var(--mg-transition);
@@ -25,19 +26,19 @@
 
 .logoContainer {
   width: 100%;
-  height: 200px;
+  height: 120px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   
   /* Rotate the entire container */
   transform: rotate(-90deg);
-  transform-origin: center;
+  transform-origin: top left;
 }
 
 .logo {
-  max-width: 180px;
-  max-height: 40px;
+  max-width: 160px;
+  max-height: 36px;
   width: auto;
   height: auto;
   
